--- a/inicio.css
+++ b/inicio.css
@@ -20,7 +20,7 @@ body{
     width: 100%;
     color:var(--logoBlue);
     text-align: center;
-    height: 100px;
+    height: 150px;
     align-content: center;
     font-size: 20px;
     margin-bottom: 20px;
@@ -101,29 +101,70 @@ body{
     margin-bottom: 5px;
 }
 
+#resultado2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.plan{
+  width: 70%;
+}
+
+/* .loader1 {
+  width: 100px;
+  height: 100px;
+  /* background: url('img/pesa.png') no-repeat center; */
+  /* animation: fall .5s linear forwards;
+  color: #f1f1f1;
+  background-color: #f1f1f1;
+  display: none;
+} */
+
+
+
+/* @keyframes fall {
+  0% { transform: translateX(-200%); }
+  200% { transform: translateX(0); }
+}
+
+.plan-container {
+  display: none;
+} */ 
 
 
 .scene {
     position: relative;
     width: 100%;
     height: 100%;
+    display: none;
+    justify-content: center;
+    top: 50px;
   }
   
   .floor {
     position: absolute;
-    bottom: 0;
+    /* bottom: 0; */
     width: 100%;
-    height: 20px;
-    background-color: #bbb;
+    height: 80px;
+    background-color: #fff;
+    top: 100px;
   }
   
   .mancuerna {
     width: 100px;
-    height: 50px;
-    background-color: #333;
+    height: 70px;
+    background-image: url(img/image-Photoroom.png);
+    background-size: cover;
     position: absolute;
-    bottom: 20px; /* Altura inicial */
-    animation: mancuerna-fall 2s linear forwards, floor-break 0.1s 2s linear forwards;
+    bottom: 20px; /*Altura inicial*/
+    animation: mancuerna-fall 1s linear forwards, floor-break 0.1s 1s linear forwards;
+    top: 0px;
+  }
+
+.fa-dumbbell{
+    color: #000;
+    z-index: 10;
   }
   
   @keyframes mancuerna-fall {
@@ -131,8 +172,8 @@ body{
       transform: translateY(-100%);
     }
     70% {
-      transform: translateY(calc(100% - 70px)); /* Altura del piso - altura de la mancuerna */
-    }
+      transform: translateY(calc(100% - 150px)); /*Altura del piso - altura de la mancuerna*/
+     }
     100% {
       transform: translateY(100%);
     }
@@ -143,7 +184,9 @@ body{
       height: 20px;
     }
     100% {
-      height: 5px; /* Altura de la rotura del piso */
-      background-color: #ff0000; /* Color de la rotura */
-    }
-  }
+      height: 100px; /*Altura de la rotura del piso*/
+     background-image: url(img/image\ copy\ 2.png);
+      background-size: cover;
+     width: 100%;
+     }
+  } 
