animacion sin choque

--- a/inicio.css
+++ b/inicio.css
@@ -1,34 +1,34 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-:root{
-    --buscador: rgb(72, 72, 72);
-    --logoBlue: #3c75bf;
-    --letras: #f1f1f1;
-    --fondo: rgb(254, 249, 245);
+:root {
+  --buscador: rgb(72, 72, 72);
+  --logoBlue: #3c75bf;
+  --letras: #f1f1f1;
+  --fondo: rgb(254, 249, 245);
 }
 
-body{
-    background-color: var(--fondo);
-    font-family: "Lato", sans-serif;
+body {
+  background-color: var(--fondo);
+  font-family: "Lato", sans-serif;
 }
 
-.titulo{
-    width: 100%;
-    color:var(--buscador);
-    text-align: center;
-    height: 150px;
-    align-content: center;
-    font-size: 20px;
-    margin-bottom: 20px;
+.titulo {
+  width: 100%;
+  color: var(--buscador);
+  text-align: center;
+  height: 150px;
+  align-content: center;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
 /* inputs de peso y altura */
-.form_container{
+.form_container {
   margin-top: 3em;
   display: flex;
   gap: 2.5em;
@@ -37,12 +37,12 @@ body{
   text-align: center;
 }
 
-.form_group{
+.form_group {
   position: relative;
-  --color:#5757577e
+  --color: #5757577e;
 }
 
-.form_input{
+.form_input {
   width: 100%;
   background: none;
   color: #706c6c;
@@ -53,19 +53,19 @@ body{
   border-bottom: 1px solid var(--color);
   font-family: 'Roboto', sans-serif;
 }
-  
-.form_input:not(:placeholder-shown){
+
+.form_input:not(:placeholder-shown) {
   color: #9b9b9b;
 }
-  
+
 .form_input:focus + .form_label,
-.form_input:not(:placeholder-shown) + .form_label{
+.form_input:not(:placeholder-shown) + .form_label {
   transform: translateY(-12px) scale(.7);
   transform-origin: left top;
   color: var(--logoBlue);
 }
-  
-.form_label{
+
+.form_label {
   color: var(--color);
   cursor: text;
   position: absolute;
@@ -76,118 +76,74 @@ body{
   transition: transform .5s, color .3s;
 }
 
-.contenedor{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    color: #fff;
+.contenedor {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  color: #fff;
 }
 
-input{
-    background-color: var(--buscador);
-    border: 1px solid var(--buscador);
-    color: var(--letras);
-    border-radius: 4px;
-    padding: 3px;
-    outline: none;
+input {
+  background-color: var(--buscador);
+  border: 1px solid var(--buscador);
+  color: var(--letras);
+  border-radius: 4px;
+  padding: 3px;
+  outline: none;
 }
 
-select{
-    background-color: var(--buscador);
-    border: 1px solid var(--letras);
-    color: var(--letras);
-    border-radius: 4px;
-    padding: 3px;
-    outline: none;
+select {
+  background-color: var(--buscador);
+  border: 1px solid var(--letras);
+  color: var(--letras);
+  border-radius: 4px;
+  padding: 3px;
+  outline: none;
 }
 
-.cont-calcular{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
-    flex-direction: column;
-    color: var(--buscador);
+.cont-calcular {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  flex-direction: column;
+  color: var(--buscador);
 }
 
-.btn-calcular{
-    width: 150px;
-    padding: 6px;
-    background-color: var(--logoBlue);
-    border: 1px solid #000;
-    border-radius: 4px;
-    margin-bottom: 5px;
+.btn-calcular {
+  width: 150px;
+  padding: 6px;
+  background-color: var(--logoBlue);
+  border: 1px solid #000;
+  border-radius: 4px;
+  margin-bottom: 5px;
 }
 
-#resultado2{
+#resultado2 {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.plan{
+.plan {
   width: 70%;
 }
 
-
-
 .scene {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: none;
-    justify-content: center;
-    top: 50px;
-  }
-  
-  .floor {
-    position: absolute;
-    width: 100%;
-    height: 80px;
-    background-color: #fff;
-    top: 100px;
-  }
-  
-  .mancuerna {
-    width: 100px;
-    height: 70px;
-    background-image: url(img/image-Photoroom.png);
-    background-size: cover;
-    position: absolute;
-    bottom: 20px; 
-    animation: mancuerna-fall 1s linear forwards, floor-break 0.1s 1s linear forwards;
-    top: 0px;
-  }
+  position: relative;
+  width: 100%;
+  height: 400px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
 
-.fa-dumbbell{
-    color: #000;
-    z-index: 10;
-  }
-  
-  @keyframes mancuerna-fall {
-    0% {
-      transform: translateY(-100%);
-    }
-    70% {
-      transform: translateY(calc(100% - 150px)); 
-     }
-    100% {
-      transform: translateY(100%);
-    }
-  }
-  
-@keyframes floor-break {
-  0% {
-    height: 20px;
-  }
-  100% {
-    height: 100px;
-    background-image: url(img/imageCopy2.png);
-    background-size: cover;
-    width: 100%;
-    }
-} 
+#animationCanvas {
+  background-color: #fff;
+  display: block;
+  margin: 0 auto;
+}
 
 /* Media queries para pantallas pequeñas */
 @media (max-width: 768px) {
@@ -195,7 +151,7 @@ select{
       display: block;
       margin: 0.5em 0;
   }
-  
+
   main {
       padding: 1em;
   }
@@ -206,11 +162,11 @@ select{
   body {
       font-size: 14px;
   }
-  
+
   header {
       padding: 0.5em 0;
   }
-  
+
   footer {
       padding: 0.5em 0;
   }
@@ -250,13 +206,6 @@ main {
 
 @media (max-width: 768px) {
   main {
-      grid-template-columns:1fr;
+      grid-template-columns: 1fr;
+  }
 }
-}
-
-
-
-
-
-
-
