--- a/inicio.css
+++ b/inicio.css
@@ -140,7 +140,7 @@ select {
 }
 
 #animationCanvas {
-  background-color: #fff;
+  background-color: rgb(254, 249, 245);
   display: block;
   margin: 0 auto;
 }
