--- a/inicio.css
+++ b/inicio.css
@@ -108,7 +108,7 @@ select {
   align-items: center;
   margin-top: 30px;
   flex-direction: column;
-  color: var(--buscador);
+  /* color: var(--buscador); */
 }
 
 .btn-calcular {
